# IFanalysis

./: .gitignore  LICENCE  README.md  example_analysis.ipynb  pyproject.toml  sample_analysis.ipynb  seaborn_examples.ipynb  test.ipynb
example-analysis/: example-analysis.ipynb
src/ifanalysis/: __init__.py  _helper_functions.py  cellcycle.py  combplot.py  counts.py  example_analysis.py  figures.py  intensity.py  normalisation.py  palb_analysis.py  sl_analysis.py  statistics.py
src/ifanalysis/styles/: Style_01 copy.mplstyle  Style_01.mplstyle
tests/: example_analysis.py  test_counts.py  test_normalisation.py
tests/matplotlib_style/: Style_02.mplstyle
