# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "hhlab-ifanalysis"
version = "0.0.1"
description = "Functions for analysing immuno-fluorescence data"
readme = "README.md"
authors = [{ name = "Helfrid Hochegger", email = "hh65@sussex.ac.uk" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["microscopy", "data", "analysis"]
dependencies = [
    "matplotlib",
    "seaborn",
    "numpy",
    "pandas"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

